added docs and comments to AttendanceStates, AttendanceManager and AttendanceRecord, fixed typo issues in IAttendanceManager and fixed markAttendance method(tested)